<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editUID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintUser"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/date"
            android:typeface="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/time"
            android:typeface="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editSysReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintSR"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editDiaReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDR"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnUpdate"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDelete" />

    </LinearLayout>
